--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.screens.post.view.ListPostActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.screens.user.view.ListUserActivity"
+            android:exported="false"
+            />
     </application>
 
 </manifest>
