--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:theme="@style/Theme.TestCeibaListUsers"
         tools:targetApi="31">
         <activity
-            android:name=".ui.screens.main.MainActivity"
-            android:exported="true">
+            android:name=".ui.screens.user.view.ListUserActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,11 +26,9 @@
         </activity>
         <activity
             android:name=".ui.screens.post.view.ListPostActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.screens.user.view.ListUserActivity"
             android:exported="false"
-            />
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
